start building portfolio

--- a/index.html
+++ b/index.html
@@ -4,12 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <title>Takveer Ahmed</title>
 </head>
 <body>
-    <h1>My first ever website</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, minima corrupti ratione vel mollitia temporibus quis voluptatum amet magnam neque eaque cum inventore corporis dolor, eius nulla! Laudantium, deserunt commodi!Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, minima corrupti ratione vel mollitia temporibus quis voluptatum amet magnam neque eaque cum inventore corporis dolor, eius nulla! Laudantium, deserunt commodi!Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, minima corrupti ratione vel mollitia temporibus quis voluptatum amet magnam neque eaque cum inventore corporis dolor, eius nulla! Laudantium, deserunt commodi!Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, minima corrupti ratione vel mollitia temporibus quis voluptatum amet magnam neque eaque cum inventore corporis dolor, eius nulla! Laudantium, deserunt commodi!</p>
-    <br>
-    <Button>CLick Me now!!!</Button>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1 class="header-text">Welcome To</h1>
+            <h2 class="header-text"> <span>Takveer Ahmed's</span> Portfolio</h2>
+            <h3></h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, minima corrupti ratione vel mollitia temporibus quis voluptatum amet magnam neque eaque cum inventore corporis dolor, eius nulla! Laudantium, deserunt commodi!Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, minima corrupti ratione vel mollitia temporibus quis voluptatum amet magnam neque eaque cum inventore corporis dolor, eius nulla! Laudantium, deserunt commodi!</p>
+            <a class="header-text" target="_blank" href="">HIRE ME</a>
+        </div>
+        <div></div>
+    </section>
+    <section>
+        <div></div>
+        <div></div>
+    </section>
+    <section>
+        <div></div>
+        <div></div>
+</section>
 </body>
 </html>
