--- a/index.html
+++ b/index.html
@@ -18,19 +18,38 @@
         <div class="half-width">
             <h1 class="header-text">Welcome To</h1>
             <h2 class="header-text"> <span>Takveer Ahmed's</span> Portfolio</h2>
+            <h3>Paitent| Panctual| Dedicated | Smartly Hardworker</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, minima corrupti ratione vel mollitia temporibus quis voluptatum amet magnam neque eaque cum inventore corporis dolor, eius nulla! Laudantium, deserunt commodi!Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, minima corrupti ratione vel mollitia temporibus quis voluptatum amet magnam neque eaque cum inventore corporis dolor, eius nulla! Laudantium, deserunt commodi!</p>
+            <a class="header-text" target="_blank" href="">HIRE ME</a>
+        </div>
+        <div>
+            <img class="half-width" src="img/takveer1.png" alt="Picture of mine">
+        </div>
+    </section>
+    <section>
+        <div>
+            <img class="half-width" src="img/profile2.png" alt="Picture of mine">
+        </div>
+        <div class="half-width dream">
+            <h1 >Dream Big & Achieve Big</h1>
+            <h2 > <span>Become a World class Web developer</span> Portfolio</h2>
             <h3></h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, minima corrupti ratione vel mollitia temporibus quis voluptatum amet magnam neque eaque cum inventore corporis dolor, eius nulla! Laudantium, deserunt commodi!Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, minima corrupti ratione vel mollitia temporibus quis voluptatum amet magnam neque eaque cum inventore corporis dolor, eius nulla! Laudantium, deserunt commodi!</p>
             <a class="header-text" target="_blank" href="">HIRE ME</a>
         </div>
-        <div></div>
     </section>
     <section>
-        <div></div>
-        <div></div>
-    </section>
-    <section>
-        <div></div>
-        <div></div>
+        <h1>Experiences</h1>
+        <div class="half-width">
+            <h1>Full Stack Web Developer</h1>
+            <h3>2021 - Present </h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro explicabo corrupti eos! Ipsum deleniti sint dicta iusto perferendis nostrum maxime, quo, vitae incidunt hic voluptatum architecto expedita facilis. Iure, ullam.</p>
+        </div>
+        <div class="half-width">
+            <h1>Baby Web Developer</h1>
+            <h3>2020 - 2021 </h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro explicabo corrupti eos! Ipsum deleniti sint dicta iusto perferendis nostrum maxime, quo, vitae incidunt hic voluptatum architecto expedita facilis. Iure, ullam.</p>
+        </div>
 </section>
 </body>
 </html>
