--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <img class="half-width" src="img/takveer1.png" alt="Picture of mine">
         </div>
     </section>
-    <section>
+    <section class="dream">
         <div>
             <img class="half-width" src="img/profile2.png" alt="Picture of mine">
         </div>
-        <div class="half-width dream">
+        <div class="half-width">
             <h1 >Dream Big & Achieve Big</h1>
             <h2 > <span>Become a World class Web developer</span> Portfolio</h2>
             <h3></h3>
@@ -38,18 +38,21 @@
             <a class="header-text" target="_blank" href="">HIRE ME</a>
         </div>
     </section>
-    <section>
+    <section class="experience">
         <h1>Experiences</h1>
-        <div class="half-width">
+        <div id="full-stack" class="half-width experience-area">
             <h1>Full Stack Web Developer</h1>
             <h3>2021 - Present </h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro explicabo corrupti eos! Ipsum deleniti sint dicta iusto perferendis nostrum maxime, quo, vitae incidunt hic voluptatum architecto expedita facilis. Iure, ullam.</p>
         </div>
-        <div class="half-width">
+        <div id="learning" class="half-width experience-area">
             <h1>Baby Web Developer</h1>
             <h3>2020 - 2021 </h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro explicabo corrupti eos! Ipsum deleniti sint dicta iusto perferendis nostrum maxime, quo, vitae incidunt hic voluptatum architecto expedita facilis. Iure, ullam.</p>
         </div>
 </section>
+<footer>
+    <p> &copy Takveer Ahmed, all rights are reserved</p>
+</footer>
 </body>
 </html>
