--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -18,9 +16,9 @@
         <div class="half-width">
             <h1 class="header-text">Welcome To</h1>
             <h2 class="header-text"> <span>Takveer Ahmed's</span> Portfolio</h2>
-            <h3>Paitent| Panctual| Dedicated | Smartly Hardworker</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, minima corrupti ratione vel mollitia temporibus quis voluptatum amet magnam neque eaque cum inventore corporis dolor, eius nulla! Laudantium, deserunt commodi!Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, minima corrupti ratione vel mollitia temporibus quis voluptatum amet magnam neque eaque cum inventore corporis dolor, eius nulla! Laudantium, deserunt commodi!</p>
-            <a class="header-text" target="_blank" href="">HIRE ME</a>
+            <h3>MSc in Data Science(CSE) | Apprentice Web Developer</h3>
+            <p>Hello, my name is Takveer Ahmed, and I work as an apprentice Web Developer. I'm doing an MSc in Data Science at Daffodil International University (CSE).I have a great academic record, the ability to understand software, working knowledge of many projects and programming languages, and a solid comprehension of basic internet technologies. I'm an excellent team player and communicator.</p>
+            <a class="header-text" target="_blank" href="www.linkedin.com/in/takveer-ahmed-tareq/">HIRE ME</a>
         </div>
         <div>
             <img class="half-width" src="img/takveer1.png" alt="Picture of mine">
@@ -34,21 +32,65 @@
             <h1 >Dream Big & Achieve Big</h1>
             <h2 > <span>Become a World class Web developer</span> Portfolio</h2>
             <h3></h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, minima corrupti ratione vel mollitia temporibus quis voluptatum amet magnam neque eaque cum inventore corporis dolor, eius nulla! Laudantium, deserunt commodi!Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, minima corrupti ratione vel mollitia temporibus quis voluptatum amet magnam neque eaque cum inventore corporis dolor, eius nulla! Laudantium, deserunt commodi!</p>
+            <p>When I started my BSc in CSE(2017), I had been engaged with coding and had built up a strong skill set in numerous programming languages. In the year 2021, I began learning web development with laravel and vue.js, and I've already acquired fluency in HTML, CSS, Bootstrap, and JavaScript. I'm now learning MERN Stack. I have a decent understanding of how to develop responsive and user-friendly webpages that are both visually appealing and simple to use. I am confident in my abilities to tackle numerous things at once while maintaining good quality. I'm looking forward to learning more about web programming.</p>
             <a class="header-text" target="_blank" href="">HIRE ME</a>
         </div>
     </section>
     <section class="experience">
         <h1>Experiences</h1>
         <div id="full-stack" class="half-width experience-area">
-            <h1>Full Stack Web Developer</h1>
-            <h3>2021 - Present </h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro explicabo corrupti eos! Ipsum deleniti sint dicta iusto perferendis nostrum maxime, quo, vitae incidunt hic voluptatum architecto expedita facilis. Iure, ullam.</p>
+            <h1>Education</h1>
+            <table>
+            <thead>
+                <tr>
+                <th scope="col">sl.</th>
+                <th scope="col">Level</th>
+                <th scope="col">School</th>
+                <th scope="col">Year</th>
+                <th scope="col">Grade</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                <th scope="row">1</th>
+                <td>SSC-Science</td>
+                <td>Government Mustafabia Alia Madrasha, Bogra</td>
+                <td>May 2013</td>
+                <td>5.00  out of 5.00</td>
+                </tr>
+                <tr>
+                <th scope="row">2</th>
+                <td>HSC-Science</td>
+                <td>Government Azizul Haque College, Bogra</td>
+                <td>August 2016</td>
+                <td>4.42 out of 5.00</td>
+                </tr>
+                <tr>
+                <th scope="row">3</th>
+                <td>BSc in CSE</td>
+                <td>Daffodil International University, Dhaka</td>
+                <td>June 2021</td>
+                <td>3.55 out of 4.00</td>
+                </tr>
+            </tbody>
+            </table>
+            <br>
+            <a target="_blank" href="https://www.beecrowd.com.br/judge/en/profile/172190">beecrowd Online Judge</a>
         </div>
         <div id="learning" class="half-width experience-area">
-            <h1>Baby Web Developer</h1>
-            <h3>2020 - 2021 </h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Porro explicabo corrupti eos! Ipsum deleniti sint dicta iusto perferendis nostrum maxime, quo, vitae incidunt hic voluptatum architecto expedita facilis. Iure, ullam.</p>
+            <h1>Apprentice Web Developer</h1>
+            <h3>2020 - Present </h3>
+            <ul>
+                <li>Full Stack Developer(Laravel & VUE.js)</li>
+                <br>
+                <a target="_blank" href="https://github.com/takveer21/laravel-vue">github Project Link</a>
+                <a target="_blank" href="https://github.com/takveer21/example">github Project Link</a>
+            </ul>
+            <ul>
+                <li>Learning MERN Stack</li>
+                <br>
+                
+            </ul>
         </div>
 </section>
 <footer>
